# Copyright (c) 2021 The Hns Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

hns_entitlements_templates = []

if (is_official_build) {
  hns_entitlements_templates += [
    "//hns/app/app-entitlements-hns.plist",
    "//chrome/app/app-entitlements-chrome.plist",
  ]
}
