# Copyright (c) 2023 The Hns Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

# Allowlist file used by hns resources, created after merging chrome allowlist
# and hns resources.
hns_allowlist_file = "${root_gen_dir}/hns_resources_allowlist.txt"
