# Copyright 2022 The Hns Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//tools/grit/grit_rule.gni")

hns_grit_resource_id_target = "//hns/resources:hns_resource_ids"
hns_grit_resource_id_file =
    get_label_info(hns_grit_resource_id_target, "target_gen_dir") +
    "/hns_resource_ids"

template("hns_grit") {
  grit(target_name) {
    forward_variables_from(invoker, "*")
    resource_ids = hns_grit_resource_id_file
    if (!defined(deps)) {
      deps = []
    }
    deps += [ hns_grit_resource_id_target ]
  }
}
