# Copyright (c) 2022 The Hns Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//hns/components/hns_page_graph/common/buildflags.gni")

hns_v8_headers_sources = []
hns_v8_headers_public_deps =
    [ "//hns/components/hns_page_graph/common:buildflags" ]

if (enable_hns_page_graph) {
  hns_v8_headers_sources +=
      [ "//hns/v8/include/v8-isolate-page-graph-utils.h" ]
}
